@@ -94,8 +94,6 @@ Counter *outgoing_wdp_counter;
 /* incoming/outgoing sms queue control */
 long max_incoming_sms_qlength;
 
-
-
 /* this is not a list of items; instead it is used as
  * indicator to note how many threads we have.
  * ALL flow threads must exit before we may safely change
@@ -144,9 +142,9 @@ static void set_shutdown_status(void)
     bb_status = BB_SHUTDOWN;
     
     if (old == BB_SUSPENDED)
-	gwlist_remove_producer(suspended);
+        gwlist_remove_producer(suspended);
     if (old == BB_SUSPENDED || old == BB_ISOLATED)
-	gwlist_remove_producer(isolated);
+        gwlist_remove_producer(isolated);
 }
 
 
@@ -207,8 +205,6 @@ static void setup_signal_handlers(void)
 }
 
 
-
-
 /*--------------------------------------------------------
  * functions to start/init sub-parts of the bearerbox
  *
@@ -216,12 +212,12 @@ static void setup_signal_handlers(void)
  * as there is only one core bearerbox thread
  */
 
-
-
 static int start_smsc(Cfg *cfg)
 {
     static int started = 0;
-    if (started) return 0;
+
+    if (started) 
+        return 0;
 
     smsbox_start(cfg);
 
@@ -238,20 +234,20 @@ static void wdp_router(void *arg)
 
     gwlist_add_producer(flow_threads);
     
-    while(bb_status != BB_DEAD) {
+    while (bb_status != BB_DEAD) {
 
-	if ((msg = gwlist_consume(outgoing_wdp)) == NULL)
-	    break;
+        if ((msg = gwlist_consume(outgoing_wdp)) == NULL)
+            break;
 
-	gw_assert(msg_type(msg) == wdp_datagram);
+        gw_assert(msg_type(msg) == wdp_datagram);
 	
-	/*
-	if (msg->list == sms)
-	    smsc_addwdp(msg);
-	else
-	*/
+        /*
+        if (msg->list == sms)
+            smsc_addwdp(msg);
+        else
+        */
 
-	udp_addwdp(msg);
+        udp_addwdp(msg);
     }
     udp_die();
     /* smsc_endwdp(); */
@@ -259,17 +255,19 @@ static void wdp_router(void *arg)
     gwlist_remove_producer(flow_threads);
 }
 
+
 static int start_wap(Cfg *cfg)
 {
     static int started = 0;
-    if (started) return 0;
 
+    if (started) 
+        return 0;
     
     wapbox_start(cfg);
 
     debug("bb", 0, "starting WDP router");
     if (gwthread_create(wdp_router, NULL) == -1)
-	panic(0, "Failed to start a new thread for WDP routing");
+        panic(0, "Failed to start a new thread for WDP routing");
 
     started = 1;
     return 0;
@@ -279,7 +277,9 @@ static int start_wap(Cfg *cfg)
 static int start_udp(Cfg *cfg)
 {
     static int started = 0;
-    if (started) return 0;
+
+    if (started) 
+        return 0;
 
     udp_start(cfg);
 
@@ -309,31 +309,36 @@ static int check_config(Cfg *cfg)
 #ifndef NO_SMS    
     grp = cfg_get_single_group(cfg, octstr_imm("smsbox"));
     if (smsp != -1 && grp == NULL) {
-	error(0, "No 'smsbox' group in configuration, but smsbox-port set");
-	return -1;
+        error(0, "No 'smsbox' group in configuration, but smsbox-port set");
+        return -1;
     }
+#else
+    warning(0, "Kannel was compiled without SMS support");
 #endif
     
 #ifndef NO_WAP	
     grp = cfg_get_single_group(cfg, octstr_imm("wapbox"));
     if (wapp != -1 && grp == NULL) {
-	error(0, "No 'wapbox' group in configuration, but wapbox-port set");
-	return -1;
+        error(0, "No 'wapbox' group in configuration, but wapbox-port set");
+        return -1;
     }
+#else
+    warning(0, "Kannel was compiled without WAP support");
 #endif
     
     return 0;
 }
 
+
 /*
  * check our own variables
  */
-
-static int check_args(int i, int argc, char **argv) {
+static int check_args(int i, int argc, char **argv) 
+{
     if (strcmp(argv[i], "-S")==0 || strcmp(argv[i], "--suspended")==0)
-	bb_status = BB_SUSPENDED;
+        bb_status = BB_SUSPENDED;
     else if (strcmp(argv[i], "-I")==0 || strcmp(argv[i], "--isolated")==0)
-	bb_status = BB_ISOLATED;
+        bb_status = BB_ISOLATED;
     else
         return -1;
 
@@ -360,10 +365,10 @@ static Cfg *init_bearerbox(Cfg *cfg)
 
     log = cfg_get(grp, octstr_imm("log-file"));
     if (log != NULL) {
-	if (cfg_get_integer(&loglevel, grp, octstr_imm("log-level")) == -1)
-	    loglevel = 0;
-	log_open(octstr_get_cstr(log), loglevel, GW_NON_EXCL);
-	octstr_destroy(log);
+        if (cfg_get_integer(&loglevel, grp, octstr_imm("log-level")) == -1)
+            loglevel = 0;
+        log_open(octstr_get_cstr(log), loglevel, GW_NON_EXCL);
+        octstr_destroy(log);
     }
 
     if (check_config(cfg) == -1)
@@ -442,7 +447,6 @@ static Cfg *init_bearerbox(Cfg *cfg)
     status_mutex = mutex_create();
 
     setup_signal_handlers();
-
     
     /* http-admin is REQUIRED */
     httpadmin_start(cfg);
@@ -462,13 +466,13 @@ static Cfg *init_bearerbox(Cfg *cfg)
 
 #ifndef NO_SMS    
     {
-	List *list;
+        List *list;
 	
-	list = cfg_get_multi_group(cfg, octstr_imm("smsc"));
-	if (list != NULL) {
-	    start_smsc(cfg);
-	    gwlist_destroy(list, NULL);
-	}
+        list = cfg_get_multi_group(cfg, octstr_imm("smsc"));
+        if (list != NULL) {
+            start_smsc(cfg);
+            gwlist_destroy(list, NULL);
+        }
     }
 #endif
     
@@ -476,11 +480,11 @@ static Cfg *init_bearerbox(Cfg *cfg)
     grp = cfg_get_single_group(cfg, octstr_imm("core"));
     val = cfg_get(grp, octstr_imm("wdp-interface-name"));
     if (val != NULL && octstr_len(val) > 0)
-	start_udp(cfg);
+        start_udp(cfg);
     octstr_destroy(val);
 
     if (cfg_get_single_group(cfg, octstr_imm("wapbox")) != NULL)
-	start_wap(cfg);
+        start_wap(cfg);
 #endif
     
     return cfg;
@@ -492,20 +496,19 @@ static void empty_msg_lists(void)
     Msg *msg;
 
 #ifndef NO_WAP
-
     if (gwlist_len(incoming_wdp) > 0 || gwlist_len(outgoing_wdp) > 0)
-	warning(0, "Remaining WDP: %ld incoming, %ld outgoing",
-	      gwlist_len(incoming_wdp), gwlist_len(outgoing_wdp));
+        warning(0, "Remaining WDP: %ld incoming, %ld outgoing",
+                gwlist_len(incoming_wdp), gwlist_len(outgoing_wdp));
 
     info(0, "Total WDP messages: received %ld, sent %ld",
-	 counter_value(incoming_wdp_counter),
-	 counter_value(outgoing_wdp_counter));
+         counter_value(incoming_wdp_counter),
+         counter_value(outgoing_wdp_counter));
 #endif
     
-    while((msg = gwlist_extract_first(incoming_wdp))!=NULL)
-	msg_destroy(msg);
-    while((msg = gwlist_extract_first(outgoing_wdp))!=NULL)
-	msg_destroy(msg);
+    while ((msg = gwlist_extract_first(incoming_wdp)) != NULL)
+        msg_destroy(msg);
+    while ((msg = gwlist_extract_first(outgoing_wdp)) != NULL)
+        msg_destroy(msg);
 
     gwlist_destroy(incoming_wdp, NULL);
     gwlist_destroy(outgoing_wdp, NULL);
@@ -513,19 +516,15 @@ static void empty_msg_lists(void)
     counter_destroy(incoming_wdp_counter);
     counter_destroy(outgoing_wdp_counter);
     
-    
 #ifndef NO_SMS
-
-    /* XXX we should record these so that they are not forever lost...
-     */
+    /* XXX we should record these so that they are not forever lost... */
     if (gwlist_len(incoming_sms) > 0 || gwlist_len(outgoing_sms) > 0)
-	debug("bb", 0, "Remaining SMS: %ld incoming, %ld outgoing",
-	      gwlist_len(incoming_sms), gwlist_len(outgoing_sms));
+        debug("bb", 0, "Remaining SMS: %ld incoming, %ld outgoing",
+              gwlist_len(incoming_sms), gwlist_len(outgoing_sms));
 
     info(0, "Total SMS messages: received %ld, sent %ld",
-	 counter_value(incoming_sms_counter),
-	 counter_value(outgoing_sms_counter));
-
+         counter_value(incoming_sms_counter),
+         counter_value(outgoing_sms_counter));
 #endif
 
     gwlist_destroy(incoming_sms, msg_destroy_item);
@@ -597,7 +596,6 @@ int main(int argc, char **argv)
     info(0, "----------------------------------------");
     info(0, GW_NAME " bearerbox II version %s starting", GW_VERSION);
 
-
     gwthread_sleep(5.0); /* give time to threads to register themselves */
 
     if (store_load(dispatch_into_queue) == -1)
@@ -654,7 +652,7 @@ int main(int argc, char **argv)
 
     /* wait until flow threads exit */
     while (gwlist_consume(flow_threads) != NULL)
-    ;
+        ;
 
     info(0, "All flow threads have died, killing core");
     bb_status = BB_DEAD;
@@ -693,8 +691,8 @@ int bb_shutdown(void)
     mutex_lock(status_mutex);
     
     if (called) {
-	mutex_unlock(status_mutex);
-	return -1;
+        mutex_unlock(status_mutex);
+        return -1;
     }
     debug("bb", 0, "Shutting down " GW_NAME "...");
 
@@ -714,16 +712,17 @@ int bb_shutdown(void)
     return 0;
 }
 
+
 int bb_isolate(void)
 {
     mutex_lock(status_mutex);
     if (bb_status != BB_RUNNING && bb_status != BB_SUSPENDED) {
-	mutex_unlock(status_mutex);
-	return -1;
+        mutex_unlock(status_mutex);
+        return -1;
     }
     if (bb_status == BB_RUNNING) {
-	smsc2_suspend();
-	gwlist_add_producer(isolated);
+        smsc2_suspend();
+        gwlist_add_producer(isolated);
     } else
 	gwlist_remove_producer(suspended);
 
@@ -732,16 +731,17 @@ int bb_isolate(void)
     return 0;
 }
 
+
 int bb_suspend(void)
 {
     mutex_lock(status_mutex);
     if (bb_status != BB_RUNNING && bb_status != BB_ISOLATED) {
-	mutex_unlock(status_mutex);
-	return -1;
+        mutex_unlock(status_mutex);
+        return -1;
     }
     if (bb_status != BB_ISOLATED) {
-	smsc2_suspend();
-	gwlist_add_producer(isolated);
+        smsc2_suspend();
+        gwlist_add_producer(isolated);
     }
     bb_status = BB_SUSPENDED;
     gwlist_add_producer(suspended);
@@ -749,15 +749,16 @@ int bb_suspend(void)
     return 0;
 }
 
+
 int bb_resume(void)
 {
     mutex_lock(status_mutex);
     if (bb_status != BB_SUSPENDED && bb_status != BB_ISOLATED) {
-	mutex_unlock(status_mutex);
-	return -1;
+        mutex_unlock(status_mutex);
+        return -1;
     }
     if (bb_status == BB_SUSPENDED)
-	gwlist_remove_producer(suspended);
+        gwlist_remove_producer(suspended);
 
     smsc2_resume();
     bb_status = BB_RUNNING;
@@ -766,20 +767,23 @@ int bb_resume(void)
     return 0;
 }
 
+
 int bb_flush_dlr(void)
 {
     /* beware that mutex locking is done in dlr_foobar() routines */
     if (bb_status != BB_SUSPENDED) {
-	return -1;
+        return -1;
     }
     dlr_flush();
     return 0;
 }
 
+
 int bb_stop_smsc(Octstr *id)
 {
     return smsc2_stop_smsc(id);
 }
+
 
 int bb_restart_smsc(Octstr *id)
 {
@@ -793,10 +797,8 @@ int bb_restart(void)
 }
 
 
-
 #define append_status(r, s, f, x) { s = f(x); octstr_append(r, s); \
-                                 octstr_destroy(s); }
-
+                                    octstr_destroy(s); }
 
 Octstr *bb_print_status(int status_type)
 {
@@ -806,82 +808,80 @@ Octstr *bb_print_status(int status_type)
     Octstr *ret, *str, *version;
     time_t t;
 
-    if ((lb = bb_status_linebreak(status_type))==NULL)
-	return octstr_create("Un-supported format");
+    if ((lb = bb_status_linebreak(status_type)) == NULL)
+        return octstr_create("Un-supported format");
 
     t = time(NULL) - start_time;
     
     if (bb_status == BB_RUNNING)
-	s = "running";
+        s = "running";
     else if (bb_status == BB_ISOLATED)
-	s = "isolated";
+        s = "isolated";
     else if (bb_status == BB_SUSPENDED)
-	s = "suspended";
+        s = "suspended";
     else if (bb_status == BB_FULL)
         s = "filled";
     else
-	s = "going down";
+        s = "going down";
 
     version = version_report_string("bearerbox");
 
     if (status_type == BBSTATUS_HTML) {
-	frmt = "%s</p>\n\n"
-	    " <p>Status: %s, uptime %ldd %ldh %ldm %lds</p>\n\n"
-	    " <p>WDP: received %ld (%ld queued), sent %ld "
-	    "(%ld queued)</p>\n\n"
-	    " <p>SMS: received %ld (%ld queued), sent %ld "
-	    "(%ld queued), store size %ld</p>\n"
-        " <p>SMS: inbound %.2f msg/sec, outbound %.2f msg/sec</p>\n\n"
-        " <p>DLR: %ld queued, using %s storage</p>\n\n";
-	footer = "<p>";
+        frmt = "%s</p>\n\n"
+               " <p>Status: %s, uptime %ldd %ldh %ldm %lds</p>\n\n"
+               " <p>WDP: received %ld (%ld queued), sent %ld "
+               "(%ld queued)</p>\n\n"
+               " <p>SMS: received %ld (%ld queued), sent %ld "
+               "(%ld queued), store size %ld</p>\n"
+               " <p>SMS: inbound %.2f msg/sec, outbound %.2f msg/sec</p>\n\n"
+               " <p>DLR: %ld queued, using %s storage</p>\n\n";
+        footer = "<p>";
     } else if (status_type == BBSTATUS_WML) {
-	frmt = "%s</p>\n\n"
-	    "   <p>Status: %s, uptime %ldd %ldh %ldm %lds</p>\n\n"
-	    "   <p>WDP: received %ld (%ld queued)<br/>\n"
-	    "      WDP: sent %ld (%ld queued)</p>\n\n"
-	    "   <p>SMS: received %ld (%ld queued)<br/>\n"
-	    "      SMS: sent %ld (%ld queued)<br/>\n"
-        "      SMS: store size %ld<br/>\n"
-        "      SMS: inbound %.2f msg/sec<br/>\n"
-        "      SMS: outbound %.2f msg/sec</p>\n\n"
-        "   <p>DLR: %ld queued<br/>\n"
-        "      DLR: using %s storage</p>\n\n";
-	footer = "<p>";
+        frmt = "%s</p>\n\n"
+               "   <p>Status: %s, uptime %ldd %ldh %ldm %lds</p>\n\n"
+               "   <p>WDP: received %ld (%ld queued)<br/>\n"
+               "      WDP: sent %ld (%ld queued)</p>\n\n"
+               "   <p>SMS: received %ld (%ld queued)<br/>\n"
+               "      SMS: sent %ld (%ld queued)<br/>\n"
+               "      SMS: store size %ld<br/>\n"
+               "      SMS: inbound %.2f msg/sec<br/>\n"
+               "      SMS: outbound %.2f msg/sec</p>\n\n"
+               "   <p>DLR: %ld queued<br/>\n"
+               "      DLR: using %s storage</p>\n\n";
+        footer = "<p>";
     } else if (status_type == BBSTATUS_XML) {
-	frmt = "<version>%s</version>\n"
-	    "<status>%s, uptime %ldd %ldh %ldm %lds</status>\n"
-	    "\t<wdp>\n\t\t<received><total>%ld</total><queued>%ld</queued></received>\n\t\t<sent><total>%ld"
-	    "</total><queued>%ld</queued></sent>\n\t</wdp>\n"
-	    "\t<sms>\n\t\t<received><total>%ld</total><queued>%ld</queued></received>\n\t\t<sent><total>%ld"
-	    "</total><queued>%ld</queued></sent>\n\t\t<storesize>%ld</storesize>\n\t\t"
-        "<inbound>%.2f</inbound>\n\t\t<outbound>%.2f</outbound>\n\t</sms>\n"
-	    "\t<dlr>\n\t\t<queued>%ld</queued>\n\t\t<storage>%s</storage>\n\t</dlr>\n";
-	footer = "";
+        frmt = "<version>%s</version>\n"
+               "<status>%s, uptime %ldd %ldh %ldm %lds</status>\n"
+               "\t<wdp>\n\t\t<received><total>%ld</total><queued>%ld</queued>"
+               "</received>\n\t\t<sent><total>%ld</total><queued>%ld</queued>"
+               "</sent>\n\t</wdp>\n"
+               "\t<sms>\n\t\t<received><total>%ld</total><queued>%ld</queued>"
+               "</received>\n\t\t<sent><total>%ld</total><queued>%ld</queued>"
+               "</sent>\n\t\t<storesize>%ld</storesize>\n\t\t"
+               "<inbound>%.2f</inbound>\n\t\t<outbound>%.2f</outbound>\n\t</sms>\n"
+               "\t<dlr>\n\t\t<queued>%ld</queued>\n\t\t<storage>%s</storage>\n\t</dlr>\n";
+        footer = "";
     } else {
-	frmt = "%s\n\nStatus: %s, uptime %ldd %ldh %ldm %lds\n\n"
-	    "WDP: received %ld (%ld queued), sent %ld (%ld queued)\n\n"
-	    "SMS: received %ld (%ld queued), sent %ld (%ld queued), store size %ld\n"
-        "SMS: inbound %.2f msg/sec, outbound %.2f msg/sec\n\n"
-        "DLR: %ld queued, using %s storage\n\n";
-	footer = "";
+        frmt = "%s\n\nStatus: %s, uptime %ldd %ldh %ldm %lds\n\n"
+               "WDP: received %ld (%ld queued), sent %ld (%ld queued)\n\n"
+               "SMS: received %ld (%ld queued), sent %ld (%ld queued), store size %ld\n"
+               "SMS: inbound %.2f msg/sec, outbound %.2f msg/sec\n\n"
+               "DLR: %ld queued, using %s storage\n\n";
+        footer = "";
     }
     
     sprintf(buf, frmt,
-	    octstr_get_cstr(version),
-	    s, t/3600/24, t/3600%24, t/60%60, t%60,
-	    counter_value(incoming_wdp_counter),
-	    gwlist_len(incoming_wdp) + boxc_incoming_wdp_queue(),
-	    counter_value(outgoing_wdp_counter),
-	    gwlist_len(outgoing_wdp) + udp_outgoing_queue(),
-	    counter_value(incoming_sms_counter),
-	    gwlist_len(incoming_sms),
-	    counter_value(outgoing_sms_counter),
-	    gwlist_len(outgoing_sms),
-	    store_messages(),
-        (float)counter_value(incoming_sms_counter)/t,
-        (float)counter_value(outgoing_sms_counter)/t,
-        dlr_messages(),
-        dlr_type());
+        octstr_get_cstr(version),
+        s, t/3600/24, t/3600%24, t/60%60, t%60,
+        counter_value(incoming_wdp_counter),
+        gwlist_len(incoming_wdp) + boxc_incoming_wdp_queue(),
+        counter_value(outgoing_wdp_counter), gwlist_len(outgoing_wdp) + udp_outgoing_queue(),
+        counter_value(incoming_sms_counter), gwlist_len(incoming_sms),
+        counter_value(outgoing_sms_counter), gwlist_len(outgoing_sms),
+        store_messages(),
+        (float) counter_value(incoming_sms_counter)/t,
+        (float) counter_value(outgoing_sms_counter)/t,
+        dlr_messages(), dlr_type());
 
     octstr_destroy(version);
     ret = octstr_create(buf);
@@ -896,16 +896,16 @@ Octstr *bb_print_status(int status_type)
 
 char *bb_status_linebreak(int status_type)
 {
-    switch(status_type) {
-    case BBSTATUS_HTML:
-	return "<br>\n";
-    case BBSTATUS_WML:
-	return "<br/>\n";
-    case BBSTATUS_TEXT:
-	return "\n";
-    case BBSTATUS_XML:
-	return "\n";
-    default:
-	return NULL;
+    switch (status_type) {
+        case BBSTATUS_HTML:
+            return "<br>\n";
+        case BBSTATUS_WML:
+            return "<br/>\n";
+        case BBSTATUS_TEXT:
+            return "\n";
+        case BBSTATUS_XML:
+            return "\n";
+        default:
+            return NULL;
     }
 }
